--- a/intro-section-with-dropdown-navigation-main/src/App.css
+++ b/intro-section-with-dropdown-navigation-main/src/App.css
@@ -10,6 +10,18 @@ p {
     font-size: 18px;
 }
 
+a {
+    text-decoration: none;
+    /* color: hsl(0, 0%, 41%); */
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 100vh;
+}
 
 /*HEADER*/
 
@@ -18,6 +30,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 1em;
+    position: relative;
 }
 
 header .title {
@@ -25,6 +38,77 @@ header .title {
     font-size: 2rem;
 }
 
+header .header-items {
+    display: none;
+    background-color: hsl(0, 0%, 98%);
+    width: 65%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    min-height: 100vh;
+}
+
+header .header-items .close-btn-container {
+    position: absolute;
+    right: 8%;
+    top: 3%;
+}
+
+header .header-items .menu {
+    margin-top: 4em;
+}
+
+header .header-items .menu ul {
+    list-style: none;
+    padding: 0;
+    padding-left: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+}
+
+header .header-items button {
+
+    padding: 0;
+}
+
+.dropdown {
+    display: flex;
+    align-items: center;
+    gap: 0.8em;
+}
+
+.dropdown-content {
+    display: none;
+}
+
+.dropdown div,
+a {
+    color: hsl(0, 0%, 41%);
+    font-size: 1rem;
+}
+
+.auth-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8em;
+}
+
+.auth-buttons .login {
+    background: none;
+    border: 0px solid transparent;
+    color: hsl(0, 0%, 41%);
+}
+
+.auth-buttons .register {
+    width: 85%;
+    color: hsl(0, 0%, 41%);
+    border: 2px solid;
+    border-radius: 10px;
+    background: transparent;
+    padding: 0.65em 0;
+}
 
 /*MAIN*/
 
@@ -40,7 +124,7 @@ main .main-text-content {
 }
 
 main .main-text-content h2 {
-    font-size: 8.5vw;
+    font-size: 9.5vw;
     margin-bottom: 0.65em;
 }
 
@@ -52,7 +136,7 @@ main .main-text-content .pyramid-text {
 main .main-text-content .pyramid-text p {
     padding: 0;
     margin: 0;
-    font-size: 4vw;
+    font-size: 4.2vw;
     line-height: 1.5em;
 }
 
@@ -85,4 +169,11 @@ main,
 
 /*Media Queries*/
 
-@media screen and (min-width: 800px) and (max-width: 1440px) {}
+@media screen and (min-width: 800px) and (max-width: 1440px) {
+
+    /*Header*/
+
+    .hamburger-menu-container {
+        display: none;
+    }
+}
