--- a/intro-section-with-dropdown-navigation-main/src/App.css
+++ b/intro-section-with-dropdown-navigation-main/src/App.css
@@ -4,6 +4,7 @@
     width: 100vw;
     height: 100vh;
     font-family: 'Epilogue', sans-serif;
+    background-color: hsl(0, 0%, 98%);
 }
 
 p {
@@ -183,9 +184,17 @@ main .main-text-content button {
     font-size: 3.5vw;
 }
 
+main .main-text-content button:hover {
+    cursor: pointer;
+    background-color: transparent;
+    border: 1px solid hsl(0, 0%, 8%);
+    color: hsl(0, 0%, 8%);
+}
+
 main .main-text-content .clients {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-bottom: 3.5em;
 }
 
@@ -198,10 +207,18 @@ main,
     width: 100%;
 }
 
+.dropdown div:hover,
+a:hover,
+.auth-buttons button:hover {
+    color: hsl(0, 0%, 8%);
+}
+
 
 /*Media Queries*/
 
-@media screen and (min-width: 800px) and (max-width: 1440px) {
+
+
+@media screen and (min-width: 950px) and (max-width: 1440px) {
 
     /*Header*/
 
@@ -219,7 +236,7 @@ main,
     }
 
     header .title {
-        margin-right: 1.7em;
+        margin-right: 1em;
     }
 
     header .header-items {
@@ -242,6 +259,20 @@ main,
         gap: 2.5em;
     }
 
+    .dropdown-content {
+        position: absolute;
+        padding: 1em;
+        margin: 0;
+        margin-top: 1em;
+        border-radius: 10px;
+        background-color: white;
+        padding: 1.5em;
+    }
+
+    .dropdown-content.features {
+        margin-left: -5%;
+    }
+
     .auth-buttons {
         display: flex;
         flex-direction: row;
@@ -262,8 +293,8 @@ main,
     main {
         display: flex;
         width: 80%;
-        margin: 4em 0;
-        gap: 4em;
+        margin: 5.5em 0;
+        gap: 5em;
     }
 
 
@@ -278,6 +309,7 @@ main,
         width: 44%;
         order: 2;
     }
+
 
 
     main .main-text-content h2 {
@@ -301,12 +333,10 @@ main,
     }
 
     main .main-text-content .clients {
-        display: flex;
-        justify-content: space-between;
-        padding-bottom: 2.5em;
+        padding-bottom: 0;
     }
 
     main .main-text-content .clients div {
-        width: 20%;
+        width: 17.5%;
     }
 }
